2005-12-04	Benedikt Meurer <benny@xfce.org>

	* HACKING, README: Update URLs and descriptions.

2005-11-30	Benedikt Meurer <benny@xfce.org>

	* NEWS, THANKS, terminal/terminal-window.c: Add Piarres Beobide
	  Egana <pi@beobide.net> to the credits.
	* THANKS, terminal/terminal-window.c: Change Daichi's email address
	  to <daichi@xfce.org> as requested.

2005-11-25	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-options.c(terminal_options_parse): Fix typo when
	  parsing the parameter for the --working-directory option.

2005-11-21	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-preferences-dialog.c
	  (terminal_preferences_dialog_init): Gtk+ 2.9 now includes the fix for
	  the GtkComboBox notify::active bug.

2005-11-16	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-widget.c(terminal_widget_drag_data_received): Fix
	  a bunch of gcc4 warnings.

2005-10-10	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-screen.c(terminal_screen_update_binding_delete):
	  Set VTE delete binding properly, patch provided by Bernhard Walle
	  <bernhard@bwalle.de>.

2005-09-14	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-window.c: Fix duplicated mnemonics in "File" and
	  "Edit" menu.

2005-08-30	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-widget.c: Add support for application/x-color drops.
	* terminal/terminal-preferences-dialog.c,
	  terminal/terminal-preferences.c, terminal/terminal-screen.c: Improve
	  the selection and cursor color handling, based on a patch provided by
	  Bernhard Walle <bernhard@bwalle.de>.

2005-08-19	Benedikt Meurer <benny@xfce.org>

	* autogen.sh, configure.in.in: Import framework changes from Thunar.
	  Fix debugging support.
	* configure.in.in: Drop the dependency on the XML::Parser perl module
	  for intltool.
	* configure.in.in, terminal/Makefile.am: Add explicit dependency on
	  libxfcegui4.
	* Makefile.am: Set automake options properly.
	* terminal/terminal-screen.c, terminal/terminal-shortcut-editor.c,