@@ -52,6 +52,9 @@ These people have translated Terminal to foreign languages.
  Daichi Kawahata <daichi@xfce.org>
   * ja translations
 
+ Kibum Hanl <yui@yui.pe.kr>
+  * ko translations
+
  Jasper Huijsmans <jasper@xfce.org>
   * nl translations
 
