@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
     "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
-  <!ENTITY date "March 2005"> 
+  <!ENTITY date "December 2005"> 
   <!ENTITY version "@PACKAGE_VERSION@">
   <!ENTITY application "@PACKAGE_NAME@"> 
 ]>
@@ -1493,7 +1493,7 @@ MiscTabCloseButtons=TRUE</programlisting>
 
     <para>The intent of this section is to collect the quite numerous frequently asked
     question that relate to working with &application;, or even terminal emulators in general. If
-    you know of a question thats missing from this page, please <ulink url="http://bugs.os-cillation.de/enter_bug.cgi?product=Terminal&amp;component=docs">file a request</ulink>.</para>
+    you know of a question thats missing from this page, please <ulink url="http://bugzilla.xfce.org/enter_bug.cgi?product=Terminal&amp;format=guided">file a request</ulink>.</para>
 
     <sect3>
       <title>&application; complains about <literal>Unable to start terminal server: Unable to connect
@@ -1545,7 +1545,7 @@ $ cp /usr/local/share/Terminal/Terminal.ui .</screen>
     <title>Support</title>
 
     <para>To report a bug or to make a suggestion regarding this application or this
-    manual, use the bug tracking system at <ulink url="http://bugs.os-cillation.de/enter_bug.cgi?product=Terminal">http://bugs.os-cillation.de/</ulink>.
+    manual, use the bug tracking system at <ulink url="http://bugzilla.xfce.org/enter_bug.cgi?product=Terminal&amp;format=guided">http://bugzilla.xfce.org/</ulink>.
     Remember that useful bug reports are ones that get bugs fixed, so a useful bug report
     has two qualities:</para>
 
@@ -1565,7 +1565,7 @@ $ cp /usr/local/share/Terminal/Terminal.ui .</screen>
     addition for the application. It is more likely that a new feature gets added if you provide
     good arguments for the feature. It will increase the chance of addition even more if you
     provide a patch that implements the requested feature, but make sure that you read the file
-    <ulink url="https://www.os-cillation.de:8080/websvn/filedetails.php?repname=terminal&amp;path=%2Ftrunk%2FHACKING">HACKING</ulink>
+    <ulink url="http://svn.xfce.org/svn/xfce/terminal/trunk/HACKING">HACKING</ulink>
     - especially the section labeled <emphasis>Coding Style</emphasis> - before you start hacking up the source.</para>
 
     <para>Else, if you have questions about the use or installation of this software, please ask on the
