@@ -7,7 +7,8 @@
 - A new command line option --hold was added, which prevents Terminal from
   closing tabs when the child command exits.
 - Updated translations: Jaime Buffery (es), Hydonsingore Sie (zh_TW)
-- New translations: Piarres Beobide Egaña (eu), Phan Vĩnh Thịnh (vi)
+- New translations: Piarres Beobide Egaña (eu), Kibum Hanl (ko), Phan Vĩnh
+  Thịnh (vi)
 
 
 0.2.4
