@@ -1,3 +1,9 @@
+2005-12-12	Benedikt Meurer <benny@xfce.org>
+
+	* NEWS, THANKS, terminal/terminal-window.c: Add Kibum Hanl
+	  <yui@yui.pe.kr> to the credits.
+	* doc/C/Terminal.xml.in: Update URLs.
+
 2005-12-04	Benedikt Meurer <benny@xfce.org>
 
 	* HACKING, README: Update URLs and descriptions.
